# Fastapi-hexacqrs-starter

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
migrations/: env.py
migrations/versions/: 0001_initial.py  323451ef83c4_add_timestamps_to_auth_users_and_users.py
src/: main.py
src/contexts/auth/application/commands/: register_user.py  register_user_handler.py
src/contexts/auth/application/queries/: auth_users.py  auth_users_handler.py  login_user_handler.py
src/contexts/auth/domain/: entities.py  repositories.py
src/contexts/auth/infrastructure/repositories/: sqlalchemy_auth_repository.py
src/contexts/auth/interfaces/http/: auth_controller.py
src/contexts/users/application/commands/: create_user.py  create_user_handler.py
src/contexts/users/application/queries/: get_user.py  get_user_handler.py  get_users.py  get_users_handler.py
src/contexts/users/domain/: entities.py  repositories.py
src/contexts/users/infrastructure/event_handlers/: user_created_handler.py
src/contexts/users/infrastructure/repositories/: sqlalchemy_user_repository.py
src/shared/application/: auth.py  command.py  dependency_injection.py  exceptions.py  ports.py  query.py
src/shared/infrastructure/: config.py  database.py  event_bus.py
src/shared/interfaces/: errors.py
tests/: conftest.py
tests/api/: test_auth_api.py  test_users_api.py
tests/application/: test_auth_handlers.py  test_user_handlers.py
tests/domain/: test_entities.py
(+1 files in other folders)
