[project]
name = "hexacqrs-starter"
version = "1.0.0"
description = "FastAPI hexagonal CQRS starter"
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.6",
    "alembic>=1.14",
    "bcrypt>=5.0",
    "dependency-injector>=4.49",
    "email-validator>=2.2",
    "fastapi>=0.138",
    "psycopg2-binary>=2.9",
    "pydantic>=2.13",
    "pydantic-settings>=2.7",
    "pyjwt>=2.13",
    "sqlalchemy>=2.0",
    "uvicorn>=0.49",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "coverage>=7.14",
    "httpx>=0.27",
    "pygments>=2.20",
    "pytest>=9.1",
    "pytest-cov>=7.1",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.format]
quote-style = "double"
